--- a/ContactMe.html
+++ b/ContactMe.html
@@ -8,7 +8,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="Vatsalya_Profile-modified.png" alt="Vatsalya's Profile Picture">
+          <img src="Vatsalya_pic-modified.png" alt="Vatsalya's Profile Picture">
         </td>
         <td>
           <h1>Vatsalya Sharma</h1>
