Changed image size to 180x180 pi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="Vatsalya_pic-modified.png" alt="Vatsalya's Profile Picture">
+        <img src="Vatsalya_pic-modified.png" width="180" height="180" alt="Vatsalya's Profile Picture">
       </td>
       <td>
         <h1>Vatsalya Sharma</h1>
