--- a/ContactMe.html
+++ b/ContactMe.html
@@ -8,7 +8,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="Vatsalya_pic-modified.png" alt="Vatsalya's Profile Picture">
+          <img src="Vatsalya_pic-modified.png" width="180" height="180" alt="Vatsalya's Profile Picture">
         </td>
         <td>
           <h1>Vatsalya Sharma</h1>
@@ -34,6 +34,11 @@
         <td>vatsalya2021.official@gmail.com</td>
       </tr>
     </table>
+    <p>
+    <a href="https://www.linkedin.com/in/vatsalya-sharma-698811224">LinkedIn</a><br>
+    <a href="https://github.com/vatsalya1102">GitHub</a><br>
+    <a href="https://codeforces.com/profile/codezoro11">CodeForces</a><br>
+    <a href="https://www.codechef.com/users/codezoro">CodeChef</a></p>
     <hr size="3" noshade>
     &nbsp;
     <form action="mailto:vatsalya2021.official@gmail.com" method="post" enctype="text/plain">
