--- a/ContactMe.html
+++ b/ContactMe.html
@@ -34,6 +34,7 @@
         <td>vatsalya2021.official@gmail.com</td>
       </tr>
     </table>
+    <h3>Visit me at:</h3>
     <p>
     <a href="https://www.linkedin.com/in/vatsalya-sharma-698811224">LinkedIn</a><br>
     <a href="https://github.com/vatsalya1102">GitHub</a><br>
